# language-pts

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  .travis.yml  Makefile  cabal.project  cabal.project.empty  language-pts.cabal
fixtures/: hurkens-hol.txt  hurkens-lambda-star.txt  hurkens-system-u.txt
notes/: J.agda  zeroIsNotOne.v
src/Language/: PTS.hs
src/Language/PTS/: Bound.hs  Check.hs  Error.hs  Eval.hs  Examples.hs  Parametricity.hs  Pretty.hs  Quote.hs  Script.hs  Smart.hs  Specification.hs  Sym.hs  Systems.hs  Term.hs  Value.hs  WHNF.hs
src/Language/PTS/Examples/: Bool.hs  Booleans.hs  Contexts.hs  Equality.hs  Errors.hs  EvenOrOdd.hs  FixedPoint.hs  Hurkens.hs  Identity.hs  Naturals.hs  Postulates.hs  Quarks.hs  Sigma.hs
src/Language/PTS/Value/: Check.hs
src/Text/Show/: Extras.hs
test/: Golden.hs
